<?xml version="1.0" encoding="utf-8"?>


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/drawerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            tools:context=".ui.activities.MapActivity">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:elevation="@dimen/action_bar_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ToggleButton
                        android:id="@+id/btnMapActive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="ToggleButton"
                        android:textOff="@string/activeOff"
                        android:textOn="@string/activeOn" />

                    <TextView
                        android:id="@+id/txtMapSubject"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:text="@string/setSubject" />

                </LinearLayout>
            </android.support.design.widget.AppBarLayout>

            <fragment
                android:id="@+id/mapFragment"
                android:name="com.indoorway.android.fragments.sdk.map.IndoorwayMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/appBar" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:clickable="true"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_settings_white_24dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/fabSettings"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_search_white_24dp" />

        </RelativeLayout>
